--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <title>IFSC 11003 | Carter Lineberry</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Carter Lineberry">
+  <link href="assets/css/style.css" rel="stylesheet"/>
 </head>
 <body>
   <h1>Carter Lineberry</h1>
   <nav>
     <ul>
         <li><a href="prototype/index.html">First HTML Assignment</a></li>
+        <li><a href="css-demo/index.html">CSS Demo</a></li>
     </ul>
   </nav>
 </body>
