--- a/prototype/index.html
+++ b/prototype/index.html
@@ -32,7 +32,7 @@
 <section id="student-life">
 <h2>Student life</h2>
 <p>The student life at UA Little Rock is typical of public universities in the United States. It is characterized by student-run organizations and affiliation groups that support social, academic, athletic, and religious activities and interests. Some of the services offered by the UA Little Rock Office of Campus Life are intramural sports and fitness programs, diversity programs, leadership development, peer tutoring, student government association, student support programs including groups for non-traditional and first-generation students, a student-run newspaper, and fraternity and sorority life. The proximity of the UA Little Rock campus to downtown Little Rock enables students to take advantage of a wide array of recreational, entertainment, educational, internship, and employment opportunities that are not available anywhere else in Arkansas.[20]</p>
- <table border="1">
+ <table border="1"> <!--My code validator said this was obsolete, but I left it in because I don't know the CSS yet.-->
     <caption>Weekly Student Activity Schedule</caption>
     <thead>
       <tr>
