CSS File Progress

--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -5,8 +5,11 @@
   <title>IFSC 11003 - Prototype</title>
   <meta charset="UTF-8">
   <meta name="description" content="Keyword rich narrative on site purpose">
-  <meta name="author" content="Thomas Wallace">
-  <link href ="assets/css/style.css" rel="stylesheet"
+  <meta name="author" content="Carter Lineberry">
+  <link href="assets/css/style.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -97,4 +100,4 @@
   </footer>
 </body>
 
-</html>v
+</html>
