--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <ul>
         <li><a href="prototype/index.html">Prototype HTML5 Assignment</a></li>
         <li><a href="css-demo/index.html">CSS Demo</a></li>
+        <li>Positioning Lab 
+          <ul>
+            <li><a href="prototype/positioning lab/absolute-1.html"></li>
+            <li><a href="prototype/positioning lab/absolute-2.html"></li>
+            <li><a href="prototype/positioning lab/float-1.html"></li>
+            <li><a href="prototype/positioning lab/float-2.html"></li>
+          </ul>
+        </li>
     </ul>
   </nav>
 </body>
