--- a/index.html
+++ b/index.html
@@ -13,15 +13,26 @@
     <ul>
         <li><a href="prototype/index.html">Prototype HTML5 Assignment</a></li>
         <li><a href="css-demo/index.html">CSS Demo</a></li>
-        <li>Positioning Lab 
+        <li> Positioning Lab
           <ul>
-            <li><a href="prototype/positioning lab/absolute-1.html"></li>
-            <li><a href="prototype/positioning lab/absolute-2.html"></li>
-            <li><a href="prototype/positioning lab/float-1.html"></li>
-            <li><a href="prototype/positioning lab/float-2.html"></li>
+            <li><a href="prototype/positioning lab/absolute-1.html"> Absolute 1</li>
+            <li><a href="prototype/positioning lab/absolute-2.html"> Absolute 2</li>
+            <li><a href="prototype/positioning lab/float-1.html">  Float 1</li>
+            <li><a href="prototype/positioning lab/float-2.html"> Float 2</li>
           </ul>
         </li>
-    </ul>
-  </nav>
+
+         <li> Grid Lab
+          <ul>
+            <li><a href="css-demo/css-grid-lab/grid-two-col-left.html"> Left </li>
+            <li><a href="css-demo/css-grid-lab/grid-two-col-right.html"> Right</li>
+            <li><a href="css-demo/css-grid-lab/grid-two-col-stacked.html"> Stacked</li>
+            <li><a href="css-demo/css-grid-lab/grid-two-col.equal.html"> Equal</li>
+          </ul>
+        </li>
+
+
+
+    </nav>
 </body>
 </html>
