--- a/css-demo/css-grid-lab/grid-two-col-left.html
+++ b/css-demo/css-grid-lab/grid-two-col-left.html
@@ -4,20 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Grid Demo</title>
+  <title>CSS Grid Layout</title>
+
   <style>
-    /*  ---------------Box Sizing-----------------  */
+    /* ---------------Box Sizing----------------- */
     html {
       box-sizing: border-box;
     }
 
-    *,
-    *:before,
-    *:after {
+    *, *:before, *:after {
       box-sizing: inherit;
     }
 
-    /* Starter */
+    /* Grey box styling for all main children */
     main > * {
       font-family: Avenir, Montserrat, Corbel, "URW Gothic", source-sans-pro,
         sans-serif;
@@ -27,85 +26,87 @@
       padding: 20px;
     }
 
+    /* GRID LAYOUT */
     main {
       display: grid;
       gap: 20px;
       max-width: 80vw;
       margin: 20px auto;
+
+      /* left column = aside, right column = content/blog */
+      grid-template-columns: 1fr 2fr;
+      grid-template-rows: auto auto auto auto;
     }
 
-header.primary{
-grid-column-start: 1 ;
-grid-column-end: 3 ;
-grid-row-start: 1;
-grid-row-end: 2;
-grid-area: 1 / 1 / 2/ 3;
-}
-#content {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
-}
-#blog {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 4;
-}
- 
-#aside {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 4;
-}
+    /* HEADER spans both columns */
+    header.primary {
+      grid-column: 1 / 3;
+      grid-row: 1;
+    }
 
+    /* LEFT COLUMN (ASIDE) */
+    aside {
+      grid-column: 1 / 2;
+      grid-row: 2 / 4;
+    }
 
+    /* CONTENT (upper right) */
+    #content {
+      grid-column: 2 / 3;
+      grid-row: 2;
+    }
 
+    /* BLOG (below content) */
+    #blog {
+      grid-column: 2 / 3;
+      grid-row: 3;
+    }
 
-footer.primary{
-
-}
-
-
-
-
-
-
+    /* FOOTER spans both columns */
+    footer.primary {
+      grid-column: 1 / 3;
+      grid-row: 4;
+    }
   </style>
-
 </head>
 
 <body>
+
   <main>
+
     <header class="primary">
       <h1>Site Header</h1>
     </header>
+
     <section id="content">
       <header>
         <h2>#Content Section Header</h2>
       </header>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt.</p>
       <footer>Section Footer</footer>
     </section>
+
     <section id="blog">
       <header>
         <h2>#Blog Section Header</h2>
       </header>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam. Culpa non suscipit doloribus corporis neque.</p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt, quasi repellendus reiciendis? Quos, facere doloribus optio quasi numquam dolore!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus expedita repellendus aliquid iusto consectetur ut velit totam explicabo magnam.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos inventore quo exercitationem temporibus magni deserunt.</p>
       <footer>Section Footer</footer>
     </section>
+
     <aside>
       <h2>Aside</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non eaque dolorum sequi velit molestiae ratione ducimus ipsum excepturi atque.</p>
     </aside>
-    <footer class="primary">Site Footer</footer>
+
+    <footer class="primary">
+      Site Footer
+    </footer>
+
   </main>
+
 </body>
 
 </html>
