--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <ul>
         <li><a href="prototype/index.html">Prototype HTML5 Assignment</a></li>
         <li><a href="css-demo/index.html">CSS Demo</a></li>
+        <li> <a href="assets/img/Screenshot 2025-11-14 225548.png">Flexbox Froggy</a></li>
+
+
+
         <li> Positioning Lab
           <ul>
             <li><a href="prototype/positioning lab/absolute-1.html"> Absolute 1</li>
